k8s/mysql-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flowstate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: flowstate
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: mysql-initdb
        configMap:
          name: mysql-initdb
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: flowstate
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
